--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,27 +1,53 @@
-/* Fuente Spectral */
-@import url('https://fonts.googleapis.com/css2?family=Spectral:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap'); 
-/* font-family: "Spectral", serif; */
-
-.h-titulos{
-    color: red;
-}
-
-.p-cuerpo{
-    color: black;
-}
-
-.p-miticos {
-    color: green;
-}
-
-main {
-    background-color: rgb(100, 100, 100);
+@import url("https://fonts.googleapis.com/css2?family=Spectral:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap");
+* {
+  margin: 0;
+  padding: 0;
 }
 
 body {
-    font-family: "Spectral", serif;
+  font-family: "Spectral", serif;
 }
 
-footer{
-    background-color: rgb(32, 30, 30);
+footer {
+  background-color: rgb(32, 30, 30);
 }
+footer .logo-footer {
+  width: 75px;
+  height: auto;
+  display: block;
+  margin: auto;
+}
+footer .p-cuerpo {
+  color: black;
+  font-size: 20px;
+  text-align: center;
+}
+
+main {
+  background-color: gray;
+}
+main p {
+  text-align: center;
+  text-justify: center;
+}
+main .h-titulos {
+  color: red;
+}
+main .p-miticos {
+  color: green;
+}
+main .p-cuerpo {
+  color: black;
+  font-size: 25px;
+}
+main .regular-img {
+  width: 512px;
+  height: 512px;
+}
+
+.logo-nav {
+  width: 90px;
+  height: auto;
+}
+
+/*# sourceMappingURL=styles.css.map */
