--- a/scss/partials/components/_footer.scss
+++ b/scss/partials/components/_footer.scss
@@ -1,5 +1,9 @@
+@use "../utilities/variables";
+
 footer{
-    background-color: rgb(32, 30, 30);
+   font-size: variables.$font-nf;
+    background-color: variables.$backgr-nf;
+
     .logo-footer{
         width: 75px;
         height: auto;
@@ -8,7 +12,6 @@ footer{
     }
     .p-cuerpo{
         color: black;
-        font-size: 20px;
         text-align: center;
 
     }
